# study-buddy-llm

./: README.md  pyproject.toml
app/: Home.py  main.py  settings.py
app/pages/: 1_Chat_with_article.py
