[tool.poetry]
name = "study-buddy-llm"
version = "0.1.0"
description = ""
authors = ["Bruna Calistrate <bruna.calistrate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
scrapegraphai = "^1.5.2"
pydantic = "^2.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
